--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -89,17 +89,114 @@ body {
 }
 
 /* ==========================================================================
- *    LAYOUT
+ *    FONT-SIZES
  * ========================================================================== */
-
-/* Make everything line up at the two outer gutters */
-
-.container .row {
-    margin-left: 0px;
-    margin-right: 0px;
-    padding-bottom: 5px;
+.container button,
+.container a.btn {
+    font-size: 16px;
+}
+body,
+p {
+    font-size: 16px;
+    line-height: 1.5em;
+}
+h1 {
+    font-size: 28px;
+    line-height: 32px;
+}
+h2,
+h3,
+.wrap h4 {
+    font-size: 20px;
+}
+h5,
+h6 {
+    font-size: 18px;
+}
+#main-navbar-collapse > a,
+#main-navbar-collapse > a.btn,
+#main-navbar-collapse > .nav a {
+    font-size: 18px;
+    line-height: 40px;
+}
+.messages {
+    font-size: 24px
+}
+.nav-circle {
+    font-size: 12px;
+    line-height: 19px;
+}
+.nav-help {
+    font-size: 18px;
+    line-height: 20px;
+}
+.select2-container--default .select2-selection--single,
+.select2-container--default,
+.select2-selection--single,
+.select2-container,
+.select2-selection {
+    font-size: 16px;
+}
+.language {
+    font-size: 0.8em;
+}
+.lm-nav {
+    font-size: 24px;
 }
 
+.lm-footer {
+    font-size: 20px;
+}
+.subnav {
+    font-size: 14px;
+}
+footer {
+    font-size: 16px;
+}
+.whitecircle {
+    font-size: 42px;
+    line-height: 80px;
+}
+table td,
+table th {
+    font-size: 12px;
+}
+.carousel-control {
+    font-size: 60px;
+    line-height: 30px;
+}
+.checkboxes input[type=checkbox]:checked + label:before {
+    font-size: 12px;
+    line-height: 12px;
+}
+.get-the-idea h3.count {
+    font-size: 35px;
+}
+.breadcrumb {
+    font-size: 14px;
+}
+#summary,
+#summary .btn{
+    font-size: 12px;
+}
+table button,
+table a.btn {
+    font-size: 12px;
+}
+.number-concluded {
+    font-size: 18px;
+    line-height: 22px;
+}
+.africa .brand {
+    text-transform: uppercase;
+}
+#filters {
+    font-size: 14px;
+}
+
+/* ==========================================================================
+ *    LAYOUT
+ * ========================================================================== */
 hr {
     margin-bottom: 2em;
 }
@@ -139,7 +236,6 @@ hr {
     background: #fcfcfc;
     font-weight: bold;
     /*opacity: 0.5; */
-    font-size: 16px;
     box-shadow: none;
     text-shadow: none;
 }
@@ -271,8 +367,6 @@ label {
 body,
 p {
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 1.5em;
 }
 
 .lead {
@@ -283,9 +377,7 @@ p {
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
-    font-size: 28px;
     text-transform: uppercase;
-    line-height: 32px;
     color: #fc941f;
 }
 
@@ -295,8 +387,6 @@ h3,
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     color: #4a4a4a;
-    font-size:20px
-
 }
 
 .wrap > h2,
@@ -317,7 +407,6 @@ h4 {
 
 h5,
 h6 {
-    font-size: 18px !important;
     margin: 0;
     font-weight: 400;
 }
@@ -446,8 +535,6 @@ i:before {
 #main-navbar-collapse > .nav a {
     text-decoration: none;
     font-weight: 200;
-    font-size: 18px;
-    line-height: 40px;
 }
 
 .navbar .nav > li > a {
@@ -459,7 +546,6 @@ i:before {
     color: #919191;
     margin-top: 2px;
     display: block;
-    font-size: 24px
 }
 
 .nav-text {
@@ -471,7 +557,6 @@ i:before {
 .nav-circle {
     width: 20px;
     height: 20px;
-    font-size: 12px;
     text-transform: uppercase;
     display: block;
     margin-top: 13px;
@@ -481,13 +566,10 @@ i:before {
     background: #919191;
     font-weight: 600;
     vertical-align: middle;
-    line-height: 19px;
 }
 
 .nav-help {
-    line-height: 20px;
     font-weight: 600;
-    font-size: 18px;
 }
 
 .navbar-form {
@@ -501,7 +583,6 @@ i:before {
 .select2-selection {
     border: none !important;
     background-color: inherit !important;
-    font-size: 16px;
     font-weight: 300;
 }
 
@@ -509,10 +590,6 @@ i:before {
     min-width: 15vw;
     max-weight: 15vw;
     padding: 5px !important;
-}
-
-.language {
-    font-size: 0.8em;
 }
 
 .navbar-default .navbar-nav > .open > a:focus,
@@ -535,18 +612,6 @@ i:before {
 .lm-nav {
     top: 10px;
     padding-right: 10px;
-    font-size: 24px;
-}
-
-.lm-navlink {
-}
-
-.lm-footer {
-    font-size: 20px;
-}
-
-.lm-lang {
-
 }
 
 .container .lm {
@@ -621,7 +686,6 @@ form >.in {
     margin-bottom: 10px;
     padding: 0;
     list-style: none;
-    font-size: 12px;
 }
 
 .subnav.nav > li > a > i {
@@ -632,7 +696,6 @@ form >.in {
     padding: 2px 5px;
     border-radius: 5px;
 }
-
 
 .subnav a:hover {
     text-decoration: underline;
@@ -780,7 +843,6 @@ body {
 footer {
     background-color: hotpink;
     height: auto !important;
-    font-size: 16px !important;
 }
 
 footer > .container {
@@ -958,8 +1020,6 @@ i.big.get-involved {
 .whitecircle {
     width: 80px;
     height: 80px;
-    font-size: 42px;
-    line-height: 80px;
     text-transform: uppercase;
     display: inline-block;
     margin-top: 40px;
@@ -1087,10 +1147,6 @@ i.big.get-involved {
     list-style: none;
 }
 
-.dashboard table {
-    font-size: 12px;
-}
-
 .dashboard td {
     padding-top: 5px;
     padding-bottom: 5px;
@@ -1208,9 +1264,7 @@ h4 .icon {
     width: 40px;
     height: 40px;
     margin-top: -20px;
-    font-size: 60px;
     font-weight: 100;
-    line-height: 30px;
     color: #4a4a4a;
     text-align: center;
     background: none;
@@ -1420,10 +1474,8 @@ h4 .icon {
 
 .checkboxes input[type=checkbox]:checked + label:before {
     content: 'x';
-    font-size: 12px;
     color: #4a4a4a;
     text-align: center;
-    line-height: 12px;
 }
 
 .checkboxes label {
@@ -1617,8 +1669,6 @@ textarea:focus {
 #filters {
     border: solid 1px #919191;
     margin-bottom: 20px;
-    font-size: 12px;
-    line-height: 16px;
     font-weight: 300;
 }
 
@@ -1683,11 +1733,6 @@ textarea:focus {
  *    MAPS
  * ========================================================================== */
 
-/*.map {
-    font-size: 12px !important;
-    line-height: 1em !important;
-}
-*/
 .locationmap {
     width: 400px;
     height: 300px;
@@ -1789,10 +1834,6 @@ ul.legend.offset li > span {
     margin-bottom: 12px;
 }
 
-.get-the-idea h3.count {
-    font-size: 35px;
-}
-
 /* ==========================================================================
  *    BREADCRUMB
  * ========================================================================== */
@@ -1802,7 +1843,6 @@ ul.legend.offset li > span {
     margin: 0;
     margin-bottom: 10px;
     padding: 0;
-    font-size: 12px;
 }
 
 .breadcrumb > li,
@@ -1813,11 +1853,6 @@ ul.legend.offset li > span {
 /* ==========================================================================
  *    TABLES
  * ========================================================================== */
-#summary,
-#summary .btn{
-    font-size: 12px;
-}
-
 .summary-wrap {
     max-width: 100%;
     overflow-x: auto
@@ -1846,7 +1881,6 @@ table a.btn {
     border-width: 2px !important;
     background: #fc941f !important;
     font-weight: bold;
-    font-size: 12px;
     box-shadow: none;
     text-shadow: none;
     padding: 2px 5px;
@@ -2145,11 +2179,6 @@ form .panel-body {
     clear: both;
 }
 
-.number-concluded {
-    font-size: 18px;
-    line-height: 22px;
-}
-
 /*
 @media (min-width: 1200px) {
 	.section-overview-wrapper {
@@ -2413,7 +2442,6 @@ body.africa .wrap {
 
 .africa .brand {
     text-transform: uppercase;
-    font-size: 18px;
     background: none;
     color: #fff;
     margin: 12px 0 0 0
