--- a/templates/start_mock.html
+++ b/templates/start_mock.html
@@ -8,8 +8,8 @@
 {% block subnav_inner %}{% endblock %}
 
 {% block content %}
-    {% include 'filters.html' %}
-    <div id="explanation" class="wrap center">
+<div class="row">
+    <div id="explanation" class="col-md-12 center">
         <div id="carousel-explanation" class="carousel slide" data-ride="carousel" data-interval="false">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -77,8 +77,8 @@
 
     </div> <!-- Carousel & Explanation -->
 
-    <div id="chartstats" class="wrap center fullwidth">
-        <h3>We currently have Information about <i class="lm lm-question-circle"></i></h3>
+    <div id="chartstats" class="center fullwidth">
+        <h3>We currently have information about <i class="lm lm-question-circle"></i></h3>
         <img src="http://placehold.it/800x450"/>
 
         <div class="row left">
@@ -95,10 +95,10 @@
         </div>
     </div> <!-- We currently have.. -->
 
-    <div id="databasestats" class="wrap">
+    <div id="databasestats">
         <div class="row">
             <div class="col-md-6">
-                <h3>Latest database Modifications</h3>
+                <h3>Latest database modifications</h3>
                 <table class="table table-striped">
                     <tr>
                         <th>Deal #</th>
@@ -107,38 +107,38 @@
                         <th>Target Country</th>
                     </tr>
                     <tr>
-                        <td>768</td>
+                        <td><a href="">768</a></td>
                         <td>03/12/14</td>
                         <td>Updated</td>
                         <td>Brazil</td>
                     </tr>
 
                     <tr>
-                        <td>4575</td>
+                        <td><a href="">4575</a></td>
                         <td>03/12/14</td>
                         <td>Updated</td>
                         <td>Lao People's Democratic Republic</td>
                     </tr>
                     <tr>
-                        <td>4054</td>
+                        <td><a href="">4054</a></td>
                         <td>10/14/14</td>
                         <td>Updated</td>
                         <td>Brazil</td>
                     </tr>
                     <tr>
-                        <td>4201</td>
+                        <td><a href="">4201</a></td>
                         <td>07/04/14</td>
                         <td>Added</td>
                         <td>Brazil</td>
                     </tr>
                     <tr>
-                        <td>4365</td>
+                        <td><a href="">4365</a></td>
                         <td>03/12/14</td>
                         <td>Updated</td>
                         <td>Panama</td>
                     </tr>
                     <tr>
-                        <td>4054</td>
+                        <td><a href="">4054</a></td>
                         <td>02/08/14</td>
                         <td>Updated</td>
                         <td>Brazil</td>
@@ -175,7 +175,7 @@
 
     <hr>
 
-    <div id="news" class="wrap">
+    <div id="news">
         <h3 class="center">Latest News</h3>
 
         <div class="row">
@@ -218,9 +218,10 @@
 
     <hr>
 
-    <div id="partners" class="wrap center">
+    <div id="partners" class="center">
         <h3>Our Partners</h3>
         <img src="{% static "img/partners.png" %}"/>
     </div> <!-- Partners -->
+</div>
 {% endblock %}
 
