Removed CMS/sekizai

--- a/chart/templates/charts_menu.html
+++ b/chart/templates/charts_menu.html
@@ -1,4 +1,4 @@
-{% load i18n menu_tags cms_tags static %}
+{% load i18n menu_tags static %}
 <!-- idea menu -->
 {% for child in children %}
   <li class="span2 {% if forloop.first %}first{% elif forloop.last %}last{% endif %}">
