--- a/chart/templates/plugins/agricultural-produce.html
+++ b/chart/templates/plugins/agricultural-produce.html
@@ -1,4 +1,4 @@
-{% extends "plugins/base.html" %}{% load i18n custom_tags menu_tags cms_tags humanize %}
+{% extends "plugins/base.html" %}{% load i18n custom_tags humanize %}
 
 {% block legend %}
 <ul class="media-list legend offset">
