--- a/templates/base-gettheidea.html
+++ b/templates/base-gettheidea.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n menu_tags menu_tags_addons cms_tags %}{% load cms_tags sekizai_tags %}
+{% load i18n %}
         {% block head %}
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
