--- a/templates/1-column.html
+++ b/templates/1-column.html
@@ -1,5 +1,4 @@
-
-{% extends "base.html" %}{% load cms_tags menu_tags %}
+{% extends "base.html" %}
 
 {% block body_class %}" data-spy="scroll" data-offset="60" data-target="#test{% endblock %}
 
