--- a/templates/start.html
+++ b/templates/start.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}{% load cms_tags menu_tags staticfiles %}
+{% extends "base.html" %}
+{% load staticfiles %}
 
 {% block title_section %}{% endblock %}
 
