--- a/templates/start_mock.html
+++ b/templates/start_mock.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}{% load cms_tags menu_tags staticfiles %}
+{% extends "base.html" %}
+{% load staticfiles %}
 
 {% block page_title %}Homepage{% endblock %}
 {% block title %}Land Matrix Global Observatory{% endblock %}
