Removed CMS/sekizai
Former-commit-id: 9365805f1980a48d07e973f0d5e741e13553abce

--- a/chart/templates/plugins/transnational-deals.html
+++ b/chart/templates/plugins/transnational-deals.html
@@ -1,4 +1,4 @@
-{% extends "plugins/base.html" %}{% load static i18n custom_tags menu_tags humanize %}
+{% extends "plugins/base.html" %}{% load static i18n custom_tags humanize %}
 
 {% block description %}
 {{ block.super }}
