--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n menu_tags %}
+{% load i18n %}
 
 {% block head %}
 <script src="/media/js/legacy/vendor/jquery.formset.custom.js" type="text/javascript" charset="utf-8"></script>
