--- a/chart/templates/plugins/investor-target-countries.html
+++ b/chart/templates/plugins/investor-target-countries.html
@@ -1,4 +1,4 @@
-{% extends "plugins/base.html" %}{% load i18n custom_tags menu_tags humanize %}
+{% extends "plugins/base.html" %}{% load i18n custom_tags humanize %}
 
 {% block description %}
 <div style="height: 100px">
