--- a/templates/language_chooser.html
+++ b/templates/language_chooser.html
@@ -1,4 +1,4 @@
-{% load i18n menu_tags %}
+{% load i18n %}
 
 {% if languages|length > 1 %}
 <li class="dropdown">
@@ -17,7 +17,7 @@
     <ul class="dropdown-menu">
         {% for language in languages %}
         <li class="language{% if current_language == language.0 %} active{% endif %}">
-            <a href="{% page_language_url language.0 %}" title="{% trans "Change to language:" %} {{ language.1 }}"><span>{{ language.1 }}</span></a>
+            <a href="{{ language.0 }}" title="{% trans "Change to language:" %} {{ language.1 }}"><span>{{ language.1 }}</span></a>
         </li>
         {% if not forloop.last %}
         <li role="separator" class="divider"></li>
