Renamed chart folder
Former-commit-id: 2a234007bfd0924b65e9122e07a8d01bb24b8b83

--- a/chart/templates/chart/overview.html
+++ b/chart/templates/chart/overview.html
@@ -1,4 +1,4 @@
-{% extends "plugins/base.html" %}{% load i18n static %}
+{% extends "base.html" %}{% load i18n static %}
 
 {% comment %}
 get the filters that are active with {{ filters }}
