Added dummy cache for DEBUG

--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -24,11 +24,11 @@
 {% endblock %}
 
 {% block subnav_inner %}
-    <li role="presentation"><a href="global/map"><i class="lm lm-map-marker"></i>Download this</a>
+    <li role="presentation"><a href="global/map"><i class="lm lm-map-marker"></i>Map</a>
     </li>
-    <li role="presentation"><a href="global/grid"><i class="lm lm-table"></i>Download this</a>
+    <li role="presentation" class="active"><a href="global/grid"><i class="lm lm-table"></i>Grid</a>
     </li>
-    <li role="presentation"><a href="global/charts"><i class="lm lm-bar-chart"></i>Download this</a>
+    <li role="presentation"><a href="global/charts"><i class="lm lm-bar-chart"></i>Chart</a>
     </li>
 {% endblock %}
 
