--- a/chart/templates/chart/overview.html
+++ b/chart/templates/chart/overview.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% load i18n static %}
+{% extends "chart/base_chart.html" %}{% load i18n static %}
 
 {% comment %}
 get the filters that are active with {{ filters }}
