--- a/chart/templates/chart/size-comparison.html
+++ b/chart/templates/chart/size-comparison.html
@@ -1,4 +1,4 @@
-{% extends "plugins/base.html" %}{% load humanize %}
+{% extends "chart/base_chart.html" %}{% load humanize %}
 
 {% block before %}
     <div class="row">
