--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -21,6 +21,9 @@
     <li>{% trans "Map" %}</li>
 {% endblock %}
 
+{% block page_title %}{% trans "Map" %}{% endblock %}
+{% block title %}{% trans "Map" %}{% endblock %}
+
 {% block content %}
     {% include "filters.html" %}
     {# { filters } #}
