--- a/chart/templates/chart/perspective.html
+++ b/chart/templates/chart/perspective.html
@@ -1,4 +1,4 @@
-{% extends "plugins/base.html" %}{% load i18n %}
+{% extends "chart/base_chart.html" %}{% load i18n %}
 
 {% block description %}
 {{ block.super }}
