--- a/chart/templates/chart/transnational-deals.html
+++ b/chart/templates/chart/transnational-deals.html
@@ -1,4 +1,4 @@
-{% extends "plugins/base.html" %}{% load static i18n custom_tags humanize %}
+{% extends "chart/base_chart.html" %}{% load static i18n custom_tags humanize %}
 
 {% block description %}
 {{ block.super }}
