Renamed chart to charts

--- a/charts/templates/charts/agricultural-produce.html
+++ b/charts/templates/charts/agricultural-produce.html
@@ -1,5 +1,8 @@
 {% extends "chart/base_chart.html" %}{% load i18n custom_tags humanize %}
 
+{% block page_title %}{% trans "Agricultural drivers" %}{% endblock %}
+{% block title %}{% trans "Agricultural drivers" %}{% endblock %}
+
 {% block legend %}
 <ul class="media-list legend offset">
     <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span> {% trans "Food-Crops" %}</span></li>
