--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -4,6 +4,12 @@
 {% block page_title %}{% trans "Chart" %}{% endblock %}
 {% block title %}{% trans "Chart" %}{% endblock %}
 
+{% block breadcrumb_inner %}
+<li><a href="/global/">Global</a></li>
+<li><a href="/global/">Charts</a></li>
+
+{% endblock %}
+
 {% block content %}
 <nav class="navbar navbar-default">
   <div class="container-fluid">
