--- a/charts/templates/charts/investor-target-countries.html
+++ b/charts/templates/charts/investor-target-countries.html
@@ -1,5 +1,8 @@
 {% extends "chart/base_chart.html" %}{% load i18n custom_tags humanize %}
 
+{% block page_title %}{% trans "Global map of investments" %}{% endblock %}
+{% block title %}{% trans "Global map of investments" %}{% endblock %}
+
 {% block description %}
 <div style="height: 100px">
     {{ body|safe }}
