--- a/charts/templates/charts/perspective.html
+++ b/charts/templates/charts/perspective.html
@@ -1,5 +1,8 @@
 {% extends "chart/base_chart.html" %}{% load i18n %}
 
+{% block page_title %}{% trans "It's a big deal" %}{% endblock %}
+{% block title %}{% trans "It's a big deal" %}{% endblock %}
+
 {% block description %}
 {{ block.super }}
 <div class="btn-group">
