--- a/charts/templates/charts/transnational-deals.html
+++ b/charts/templates/charts/transnational-deals.html
@@ -1,5 +1,8 @@
 {% extends "chart/base_chart.html" %}{% load static i18n custom_tags humanize %}
 
+{% block page_title %}{% trans "Web of transnational deals" %}{% endblock %}
+{% block title %}{% trans "Web of transnational deals" %}{% endblock %}
+
 {% block description %}
 {{ block.super }}
 <a class="btn show-all" href="#" class="disabled">Reset</a>
