Renamed chart to charts

--- a/charts/templates/charts/agricultural-produce.html
+++ b/charts/templates/charts/agricultural-produce.html
@@ -1,4 +1,4 @@
-{% extends "chart/base_chart.html" %}{% load i18n custom_tags humanize %}
+{% extends "charts/base_chart.html" %}{% load i18n custom_tags humanize %}
 
 {% block page_title %}{% trans "Agricultural drivers" %}{% endblock %}
 {% block title %}{% trans "Agricultural drivers" %}{% endblock %}
