--- a/charts/templates/charts/overview.html
+++ b/charts/templates/charts/overview.html
@@ -1,4 +1,4 @@
-{% extends "chart/base_chart.html" %}{% load i18n static %}
+{% extends "charts/base_chart.html" %}{% load i18n static %}
 
 {% block page_title %}{% trans "Dynamics Overview" %}{% endblock %}
 {% block title %}{% trans "Dynamics Overview" %}{% endblock %}
