--- a/charts/templates/charts/perspective.html
+++ b/charts/templates/charts/perspective.html
@@ -1,4 +1,4 @@
-{% extends "chart/base_chart.html" %}{% load i18n %}
+{% extends "charts/base_chart.html" %}{% load i18n %}
 
 {% block page_title %}{% trans "It's a big deal" %}{% endblock %}
 {% block title %}{% trans "It's a big deal" %}{% endblock %}
